--- a/index.html
+++ b/index.html
@@ -1,181 +1,87 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>HIPAA Sign</title>
-
-  <!-- Dropbox Sign (HelloSign) Embedded -->
-  <script src="https://cdn.hellosign.com/public/js/embedded/v2.11.1/embedded.development.js"></script>
-
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    .box { max-width: 860px; margin: 0 auto; }
-    .muted { color: #666; }
-    pre { background: #f6f6f6; padding: 12px; border-radius: 8px; overflow: auto; }
-    .row { display:flex; gap:12px; flex-wrap: wrap; }
-    .pill { display:inline-block; padding:6px 10px; border-radius: 999px; background:#eee; }
-    .ok { background:#d9fdd3; }
-    .bad { background:#ffe0e0; }
+    body { font-family: system-ui, Arial; margin: 16px; }
+    .box { padding: 12px; border: 1px solid #ddd; border-radius: 10px; margin-bottom: 12px; }
+    pre { white-space: pre-wrap; word-break: break-word; }
+    #sign-container { width: 100%; height: 92vh; border: 1px solid #ddd; border-radius: 10px; overflow: hidden; }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h2>Signing page</h2>
-    <div class="muted">This page fetches embedded <code>sign_url</code> and opens Dropbox Sign.</div>
+  <h2>HIPAA Sign</h2>
 
-    <div class="row" style="margin-top:10px">
-      <span id="pillSid" class="pill">sid: …</span>
-      <span id="pillApi" class="pill">api: …</span>
-      <span id="pillFetch" class="pill">fetch: …</span>
-      <span id="pillEmbed" class="pill">embed: …</span>
-    </div>
+  <div class="box" id="status">Loading…</div>
+  <div class="box"><b>SID:</b> <span id="sid"></span></div>
+  <div class="box"><b>API response:</b><pre id="api"></pre></div>
 
-    <div id="status" style="margin-top:12px"></div>
-    <pre id="debug" style="margin-top:12px"></pre>
-  </div>
+  <div id="sign-container"></div>
+
+  <!-- Dropbox Sign Embedded -->
+  <script src="https://cdn.hellosign.com/public/js/embedded/v2.11.1/embedded.development.js"></script>
 
   <script>
-    const STATUS = document.getElementById('status');
-    const DEBUG = document.getElementById('debug');
+    const elStatus = document.getElementById('status');
+    const elSid = document.getElementById('sid');
+    const elApi = document.getElementById('api');
 
-    const pillSid = document.getElementById('pillSid');
-    const pillApi = document.getElementById('pillApi');
-    const pillFetch = document.getElementById('pillFetch');
-    const pillEmbed = document.getElementById('pillEmbed');
+    function setStatus(msg) { elStatus.textContent = msg; }
 
-    function pill(el, text, state) {
-      el.textContent = text;
-      el.classList.remove('ok','bad');
-      if (state === 'ok') el.classList.add('ok');
-      if (state === 'bad') el.classList.add('bad');
-    }
-
-    function setStatus(msg) {
-      STATUS.textContent = msg;
-      console.log('[SIGN]', msg);
-    }
-
-    function setDebug(objOrText) {
-      const text = typeof objOrText === 'string' ? objOrText : JSON.stringify(objOrText, null, 2);
-      DEBUG.textContent = text;
-      console.log('[SIGN DEBUG]', objOrText);
-    }
-
-    function qp(name) {
+    function getSid() {
       const u = new URL(window.location.href);
-      return u.searchParams.get(name);
-    }
-
-    async function readTextSafe(resp) {
-      try { return await resp.text(); } catch { return ''; }
+      return (u.searchParams.get('sid') || '').trim();
     }
 
     async function main() {
-      const sid = qp('sid');
-
-      // ✅ REPLACE THIS with your real API Gateway base URL (no trailing slash)
-      // Example: https://abc123.execute-api.eu-north-1.amazonaws.com
-      const API_BASE = 'https://6cxl9xwo00.execute-api.eu-north-1.amazonaws.com';
-
-      pill(pillSid, `sid: ${sid ? sid.slice(0,8)+'…' : 'missing'}`, sid ? 'ok' : 'bad');
-      pill(pillApi, `api: ${API_BASE}`, API_BASE.includes('YOUR_API_GATEWAY_DOMAIN') ? 'bad' : 'ok');
-
+      const sid = getSid();
+      elSid.textContent = sid || '(missing)';
       if (!sid) {
-        setStatus('Missing sid in URL');
-        setDebug({ hint: 'Open link like: .../Hippa/?sid=<signature_id>' });
-        pill(pillFetch, 'fetch: not started', 'bad');
-        pill(pillEmbed, 'embed: not started', 'bad');
+        setStatus('Missing sid in URL. Example: /sign?sid=...');
         return;
       }
 
-      if (API_BASE.includes('YOUR_API_GATEWAY_DOMAIN')) {
-        setStatus('API_BASE is not configured (still placeholder).');
-        setDebug({ fix: 'Edit index.html and set API_BASE to your API Gateway domain.' });
-        pill(pillFetch, 'fetch: blocked', 'bad');
-        pill(pillEmbed, 'embed: not started', 'bad');
-        return;
-      }
+      setStatus('Fetching sign_url…');
+      const apiUrl = `https://6cxl9xwo00.execute-api.eu-north-1.amazonaws.com/api/sign_url?sid=${encodeURIComponent(sid)}`;
 
-      const url = `${API_BASE}/api/sign_url?sid=${encodeURIComponent(sid)}`;
-
-      setStatus('Requesting sign_url…');
-      pill(pillFetch, 'fetch: calling /api/sign_url', null);
-
-      let resp, text, data;
+      let data;
       try {
-        resp = await fetch(url, { method: 'GET', credentials: 'omit' });
+        const res = await fetch(apiUrl, { method: 'GET' });
+        data = await res.json();
       } catch (e) {
-        setStatus('Fetch failed (network/CORS). Open DevTools Console.');
-        setDebug({ url, error: String(e), hint: 'Most common: CORS blocked or wrong API_BASE.' });
-        pill(pillFetch, 'fetch: FAILED', 'bad');
-        pill(pillEmbed, 'embed: not started', 'bad');
+        elApi.textContent = String(e);
+        setStatus('Failed to call API (network/CORS).');
         return;
       }
 
-      text = await readTextSafe(resp);
-      try { data = JSON.parse(text); } catch { data = null; }
+      elApi.textContent = JSON.stringify(data, null, 2);
 
-      if (!resp.ok) {
-        setStatus(`API HTTP ${resp.status}. See debug.`);
-        setDebug({ url, http_status: resp.status, body_text: text.slice(0, 2000) });
-        pill(pillFetch, `fetch: HTTP ${resp.status}`, 'bad');
-        pill(pillEmbed, 'embed: not started', 'bad');
+      if (!data || !data.ok || !data.sign_url || !data.client_id) {
+        setStatus('API did not return sign_url/client_id.');
         return;
       }
 
-      if (!data || !data.ok) {
-        setStatus('API responded but not ok. See debug.');
-        setDebug({ url, http_status: resp.status, json: data, body_text: text.slice(0, 2000) });
-        pill(pillFetch, 'fetch: bad json', 'bad');
-        pill(pillEmbed, 'embed: not started', 'bad');
-        return;
-      }
+      setStatus('Opening embedded signing…');
 
-      if (!data.sign_url || !data.client_id) {
-        setStatus('API ok=true but missing sign_url/client_id. See debug.');
-        setDebug({ url, json: data });
-        pill(pillFetch, 'fetch: missing fields', 'bad');
-        pill(pillEmbed, 'embed: not started', 'bad');
-        return;
-      }
+      const client = new window.HelloSign();
+      client.on('open', () => setStatus('Embedded opened.'));
+      client.on('sign', () => setStatus('Signed ✅ (you can close this tab).'));
+      client.on('close', () => setStatus('Closed.'));
+      client.on('error', (err) => {
+        setStatus('Embedded error: ' + (err && (err.message || err.toString())));
+      });
 
-      pill(pillFetch, 'fetch: OK', 'ok');
-      setStatus('Opening embedded signer…');
-      setDebug({ sid, sign_url_head: String(data.sign_url).slice(0, 120), client_id: data.client_id, test_mode: data.test_mode });
-
-      try {
-        const client = new HelloSign({ clientId: data.client_id });
-
-        client.open(data.sign_url, {
-          skipDomainVerification: true,
-          allowCancel: true,
-          debug: true
-        });
-
-        pill(pillEmbed, 'embed: OPENED', 'ok');
-
-        client.on('sign', () => setStatus('Signed ✅ You can close this page.'));
-        client.on('cancel', () => setStatus('Signing cancelled.'));
-        client.on('error', (e) => {
-          setStatus('Embed error. Check debug + console.');
-          setDebug({ embed_error: e });
-          pill(pillEmbed, 'embed: ERROR', 'bad');
-        });
-
-      } catch (e) {
-        setStatus('Failed to open embedded signer. Check debug.');
-        setDebug({ error: String(e) });
-        pill(pillEmbed, 'embed: FAILED', 'bad');
-      }
+      // IMPORTANT: allow skipping domain verification for test_mode only
+      client.open(data.sign_url, {
+        clientId: data.client_id,
+        container: document.getElementById('sign-container'),
+        skipDomainVerification: (data.test_mode === "1")
+      });
     }
 
-    main().catch((e) => {
-      setStatus('Fatal error. Check console.');
-      setDebug({ fatal: String(e) });
-      pill(pillFetch, 'fetch: fatal', 'bad');
-      pill(pillEmbed, 'embed: not started', 'bad');
-    });
+    main();
   </script>
 </body>
 </html>
