--- a/index.html
+++ b/index.html
@@ -1,246 +1,128 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>HIPAA Sign</title>
 
-  <!-- HelloSign / Dropbox Sign Embedded -->
+  <!-- HelloSign Embedded -->
   <script src="https://cdn.hellosign.com/public/js/embedded/v2.11.1/embedded.development.js"></script>
 
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      background: #fff;
-      font-family: Arial, sans-serif;
-    }
-
-    .box {
-      max-width: 820px;
-      margin: 0 auto;
-      padding: 16px;
-    }
-
+    body { font-family: Arial, sans-serif; padding: 16px; }
+    .box { max-width: 720px; margin: 0 auto; }
+    .card { border: 1px solid #ddd; border-radius: 12px; padding: 12px; margin: 12px 0; }
     .muted { color: #666; }
-
-    .card {
-      border: 1px solid #e6e6e6;
-      border-radius: 12px;
-      padding: 12px;
-      margin: 10px 0;
-      background: #fff;
-      word-break: break-word;
-      white-space: pre-wrap;
-    }
-
-    .title {
-      font-weight: 700;
-      margin-bottom: 6px;
-    }
-
-    #status { margin-top: 10px; }
-
-    /* Dedicated container for embedded iframe */
-    #embed {
-      margin-top: 14px;
-      width: 100%;
-      min-height: 900px;        /* key: give space so Continue isn't hidden */
-      height: 900px;
-      border: 1px solid #eee;
-      border-radius: 12px;
-      overflow: hidden;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 10px 14px;
-      border-radius: 10px;
-      border: 1px solid #ddd;
-      background: #fafafa;
-      cursor: pointer;
-      text-decoration: none;
-      color: #111;
-      margin-right: 10px;
-    }
-
-    .warn {
-      background: #fff5f5;
-      border-color: #ffd2d2;
-    }
+    pre { white-space: pre-wrap; word-break: break-word; margin: 0; }
+    .ok { color: #0a7; }
+    .bad { color: #c22; }
   </style>
 </head>
-
 <body>
   <div class="box">
     <h2>HIPAA Sign</h2>
-    <div class="muted">Loading secure signing session…</div>
+    <div class="card muted" id="top">Loading secure signing session…</div>
 
-    <div id="status" class="card"></div>
+    <div class="card"><b>SID:</b> <span id="sid">—</span></div>
 
-    <div id="meta" class="card" style="display:none;">
-      <div class="title">SID</div>
-      <div id="sidBox"></div>
+    <div class="card">
+      <div><b>Status:</b> <span id="status">—</span></div>
+      <div class="muted" style="margin-top:6px;">Open in Safari if you came from WhatsApp.</div>
     </div>
 
-    <div id="apiOut" class="card" style="display:none;">
-      <div class="title">API response</div>
-      <pre id="apiJson" style="margin:0;"></pre>
+    <div class="card">
+      <div><b>API response:</b></div>
+      <pre id="api">—</pre>
     </div>
-
-    <div id="ua" class="card" style="display:none;">
-      <div class="title">Debug</div>
-      <div id="uaText"></div>
-    </div>
-
-    <div id="actions" style="display:none;">
-      <a id="openSafari" class="btn warn" href="#" target="_blank" rel="noopener">Open in Safari/Browser</a>
-      <button id="retryBtn" class="btn">Retry</button>
-    </div>
-
-    <!-- Embedded signer mounts here -->
-    <div id="embed"></div>
   </div>
 
   <script>
-    const STATUS   = document.getElementById('status');
-    const META     = document.getElementById('meta');
-    const SIDBOX   = document.getElementById('sidBox');
-    const APIOUT   = document.getElementById('apiOut');
-    const APIJSON  = document.getElementById('apiJson');
-    const UACARD   = document.getElementById('ua');
-    const UATEXT   = document.getElementById('uaText');
-    const ACTIONS  = document.getElementById('actions');
-    const OPENBTN  = document.getElementById('openSafari');
-    const RETRYBTN = document.getElementById('retryBtn');
-    const EMBED    = document.getElementById('embed');
-
-    function setStatus(msg) {
-      STATUS.textContent = msg;
-      console.log('[SIGN]', msg);
-    }
+    const $ = (id) => document.getElementById(id);
+    const setTop = (msg, cls) => { $('top').textContent = msg; $('top').className = 'card ' + (cls || 'muted'); };
+    const setStatus = (msg, cls) => { $('status').textContent = msg; $('status').className = (cls || ''); console.log('[SIGN]', msg); };
+    const setApi = (obj) => { $('api').textContent = typeof obj === 'string' ? obj : JSON.stringify(obj, null, 2); };
 
     function qp(name) {
       const u = new URL(window.location.href);
       return u.searchParams.get(name);
     }
 
-    function isWhatsAppWebView() {
-      const ua = navigator.userAgent || '';
-      return /WhatsApp/i.test(ua);
-    }
+    async function main() {
+      const sid = qp('sid');
+      $('sid').textContent = sid || '—';
+      if (!sid) {
+        setTop('Missing sid in URL', 'bad');
+        setStatus('Missing sid', 'bad');
+        return;
+      }
 
-    // ✅ Put your API Gateway base here (NO trailing slash)
-    // Example: https://6cxl9xwo00.execute-api.eu-north-1.amazonaws.com
-    const API_BASE = 'https://6cxl9xwo00.execute-api.eu-north-1.amazonaws.com';
-
-    async function loadSignUrl(sid) {
+      // ✅ твой API Gateway base (без /api/... в конце)
+      const API_BASE = 'https://6cxl9xwo00.execute-api.eu-north-1.amazonaws.com';
       const url = `${API_BASE}/api/sign_url?sid=${encodeURIComponent(sid)}`;
-      setStatus('Requesting sign_url…');
 
-      const resp = await fetch(url, { method: 'GET' });
+      // покажем, в каком браузере открыли
+      const ua = navigator.userAgent || '';
+      console.log('[UA]', ua);
 
-      let data = null;
+      setTop('Requesting sign_url…');
+      setStatus('Calling API…');
+
+      let data;
       try {
-        data = await resp.json();
+        const resp = await fetch(url, { method: 'GET', headers: { 'accept': 'application/json' } });
+        const txt = await resp.text();
+        try { data = JSON.parse(txt); } catch { data = { ok: false, raw: txt, http_status: resp.status }; }
+        data.http_status = resp.status;
       } catch (e) {
-        data = { ok: false, error: 'non_json_response', status: resp.status };
+        setTop('Network error calling API', 'bad');
+        setStatus('Network error (see console)', 'bad');
+        console.error(e);
+        return;
       }
 
-      // Show debug
-      APIOUT.style.display = 'block';
-      APIJSON.textContent = JSON.stringify(data, null, 2);
+      setApi(data);
 
-      if (!resp.ok) {
-        throw new Error(`HTTP_${resp.status}`);
-      }
       if (!data || data.ok !== true) {
-        throw new Error(data && data.error ? data.error : 'api_error');
+        setTop('API did not return ok=true', 'bad');
+        setStatus('API error: ' + (data && data.error ? data.error : 'unknown'), 'bad');
+        return;
       }
+
       if (!data.sign_url || !data.client_id) {
-        throw new Error('missing_sign_url_or_client_id');
+        setTop('API did not return sign_url/client_id.', 'bad');
+        setStatus('Missing sign_url or client_id', 'bad');
+        return;
       }
 
-      return data;
-    }
+      setTop('Opening embedded signer…', 'ok');
+      setStatus('Embedded opening…');
 
-    function openEmbedded(data) {
-      setStatus('Opening embedded signer…');
+      const client = new HelloSign({ clientId: data.client_id });
 
-      // Clear previous embed
-      EMBED.innerHTML = '';
-
-      const client = new HelloSign({
-        clientId: data.client_id
-      });
-
-      // Important: mount into container + give height so Continue is visible
       client.open(data.sign_url, {
-        container: EMBED,
+        // ✅ key fixes for iPhone UI
         skipDomainVerification: true,
         allowCancel: true,
         debug: true,
-        // Some SDK builds accept height; harmless if ignored
-        height: 900
+
+        // ✅ force full screen and make sure it attaches to body
+        container: document.body,
+        useFullScreen: true
       });
 
-      client.on('ready', () => setStatus('Embedded loaded. Scroll inside signer if needed.'));
-      client.on('sign',  () => setStatus('Signed ✅ You can close this page.'));
-      client.on('cancel',() => setStatus('Signing cancelled.'));
+      client.on('open', () => setStatus('Embedded opened.', 'ok'));
+      client.on('sign', () => setStatus('Signed ✅ You can close this page.', 'ok'));
+      client.on('cancel', () => setStatus('Signing cancelled.'));
       client.on('error', (e) => {
-        setStatus('Embed error. Check console + API response block.');
+        setTop('Embed error. Check console.', 'bad');
+        setStatus('Embed error', 'bad');
         console.error('HelloSign error:', e);
       });
     }
 
-    async function main() {
-      const sid = qp('sid');
-
-      // Debug cards
-      UACARD.style.display = 'block';
-      UATEXT.textContent = navigator.userAgent || '';
-
-      if (!sid) {
-        setStatus('Missing sid in URL');
-        return;
-      }
-
-      META.style.display = 'block';
-      SIDBOX.textContent = sid;
-
-      // WhatsApp webview hint
-      if (isWhatsAppWebView()) {
-        ACTIONS.style.display = 'block';
-        setStatus('Opened inside WhatsApp. If buttons like Continue are hidden, tap "Open in Safari/Browser".');
-
-        // open same URL but user chooses browser
-        OPENBTN.href = window.location.href;
-      }
-
-      try {
-        const data = await loadSignUrl(sid);
-
-        // If not in WhatsApp webview, still show actions (useful for testing)
-        ACTIONS.style.display = 'block';
-        OPENBTN.href = window.location.href;
-
-        openEmbedded(data);
-      } catch (e) {
-        ACTIONS.style.display = 'block';
-        setStatus('API did not return sign_url/client_id. Tap Retry, and check API response block.');
-        console.error(e);
-      }
-    }
-
-    RETRYBTN.addEventListener('click', () => {
-      // full reload is the cleanest for embedded SDK in mobile browsers
-      window.location.reload();
-    });
-
     main().catch((e) => {
-      ACTIONS.style.display = 'block';
-      setStatus('Fatal error. Check console + API response block.');
+      setTop('Fatal error. Check console.', 'bad');
+      setStatus('Fatal error', 'bad');
       console.error(e);
     });
   </script>
